# mail-service

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
backend/.cargo/: config.toml
backend/migrations/2025-01-19-115659_create_namespaces/: down.sql  up.sql
backend/migrations/2025-01-19-115851_create_templates/: up.sql
backend/migrations/2025-01-20-063447_create_namespace/: down.sql  up.sql
backend/migrations/2025-01-20-064421_create_templates/: up.sql
backend/migrations/2025-01-21-073216_create_templates_test/: down.sql  up.sql
backend/migrations/2025-01-22-103856_create_template_test_2/: down.sql  up.sql
backend/migrations/2025-01-27-074330_create_lists/: down.sql  up.sql
backend/migrations/2025-01-28-083323_create_contact_lists/: down.sql  up.sql
backend/migrations/2025-01-28-083509_create_contacts/: down.sql  up.sql
backend/migrations/2025-01-29-054927_create_contacts/: down.sql
backend/migrations/2025-01-29-055113_list_contact/: down.sql  up.sql
backend/migrations/2025-01-31-040420_create_server/: up.sql
backend/migrations/2025-01-31-041149_create_campaign_senders/: down.sql  up.sql
backend/migrations/2025-01-31-041422_create_campaigns/: down.sql  up.sql
backend/migrations/2025-01-31-042011_create_servers/: up.sql
backend/migrations/2025-01-31-042109_campaign_senders/: up.sql
backend/migrations/2025-01-31-042153_campaigns/: up.sql
backend/migrations/2025-01-31-042659_create_mails/: down.sql  up.sql
backend/migrations/2025-02-03-063931_create_bounce_logs/: down.sql  up.sql
backend/prisma/: schema.prisma
backend/prisma-cli/: Cargo.toml
backend/prisma-cli/src/: main.rs
backend/prisma/migrations/20250116054145_init/: migration.sql
backend/prisma/migrations/20250116070843_init/: migration.sql
backend/prisma/migrations/20250116073755_init/: migration.sql
backend/src/: appState.rs  error.rs  handler.rs  lib.rs  main.rs  model.rs  route.rs  schema.rs
backend/src/db/: mod.rs
backend/src/handlers/: bounce_logs_handler.rs  campaign.rs  campaign_sender.rs  contact.rs  list.rs  mail.rs  namespace.rs  template.rs
backend/src/models/: bounce_logs.rs  campaign.rs  campaign_sender.rs  contact.rs  list.rs  list_contacts.rs  mail.rs  namespace.rs  template.rs
backend/src/repositories/: bounce_logs_repo.rs  campaign.rs  campaign_sender.rs  contact.rs  list_contact_repo.rs  list_repo.rs  mail.rs  namespace.rs  template_repo.rs
backend/src/routes/: bounce_logs_route.rs  campaign.rs  campaign_senders.rs  contact.rs  list.rs  mail.rs  namespace.rs  template.rs
backend/src/servers/: servers_handler.rs  servers_model.rs  servers_repo.rs  servers_routes.rs  servers_services.rs
backend/src/services/: aws_service.rs  bounce_logs_service.rs  campaign.rs  campaign_sender_service.rs  campaign_service.rs  contact.rs  list_service.rs  mail.rs  namespace.rs  template_service.rs
backend/src/tests/: mod.rs
backend/src/utils/: contact_lists_functions.rs  email_utils.rs  template_utils.rs
backend/tests/: contact.rs  fixtures.rs  list_contact.rs  list_tests.rs  servers.rs  template.rs  template_handler.rs  template_test.rs  template_tests.rs  templates.rs  test_env.rs
frontend/: .gitignore  README.md  (+3 more)
(+51 files in other folders)
