[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full", "test-util"] }
dotenv = "0.15.0"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
chrono = { version = "0.4.39", features = ["serde"] }


utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = {version = "9.0.0", features=["axum"] }

diesel = { version = "2.2.0", features = ["postgres", "r2d2", "serde_json", "chrono", "uuid"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenvy = "0.15"

uuid = { version = "1.12.0", features = ["serde"] }
r2d2 = "0.8.10"

diesel-async = "0.5.2"
reqwest = { version = "0.12", features = ["json"] }

http-body-util = "0.1.2"
tower = { version = "0.4", features = ["full"] }
hyper = "1.5.2"
once_cell = "1.17.1"
