[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
dotenv = "0.15.0"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
chrono = { version = "0.4.39", features = ["serde"] }
hyper = "0.14"
once_cell = "1.20.2"

diesel = { version = "2.2.0", features = ["postgres", "serde_json", "uuid", "chrono", "r2d2" ] }
diesel-async = { version = "0.5.2", features = ["postgres"] }
diesel_migrations = "2.2.0"
uuid = { version = "1.12.1", features = ["serde"] }

utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = {version = "9.0.0", features=["axum"] }
url = "2.5.4"

warp = "0.3.7"


[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
mockall = "0.13.1"
axum-test-helpers = "0.8.0"

[[bin]]
name = "backend"
path = "src/main.rs"